kubernetes/exemplo 6/k8s/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: react-blue
  namespace: dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: react-blue

  template:
    metadata:
      labels:
        app: react-blue

    spec:

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: ambiente
                    operator: In
                    values:
                      - dev
      containers:
        - name: react-blue

          image: diegocbcastroo/react-k8s-blue:v1

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"
