kubernetes/exemplo 6/k8s/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: react-blue-service
  namespace: dev

spec:
  selector:
    app: react-blue

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
