kubernetes/exemplo 6/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: react-ingress
  namespace: dev

spec:
  ingressClassName: traefik

  rules:
    - host: dev.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: react-blue-service

                port:
                  number: 80
